erDiagram
    % Identity & Registry
    Account ||--o{ Company : "owns"
    Account ||--o{ Member : "contains"
    Permission {
        uuid id PK
        string code UK
        string description
    }

    % Company-Scoped Roles
    Company ||--o{ Role : "defines"
    Role ||--o{ RolePermission : "groups"
    Permission ||--o{ RolePermission : "mapped to"
    
    % Member Assignments
    Member ||--o{ MemberRole : "assigned"
    Role ||--o{ MemberRole : "assigned via"
    
    % User Overrides (The Trio)
    Member ||--o{ MemberPermissionOverride : "receives"
    Permission ||--o{ MemberPermissionOverride : "targeted"
    Company ||--o{ MemberPermissionOverride : "scoped to"

    % Subscription & Quotas
    Subscription ||--|| Account : "billed to"
    Subscription {
        uuid id PK
        uuid plan_id FK
        jsonb custom_overrides "Polymorphic Quota objects"
        string status
    }
    Plan ||--o{ PlanFeature : "includes"
    PlanFeature {
        uuid id PK
        uuid feature_id FK
        jsonb config "Base Quota objects"
    }

    % B2B Collaboration
    Account ||--o{ Collaboration : "client"
    Account ||--o{ Collaboration : "provider"
    Company ||--o{ Collaboration : "shared"
    Collaboration ||--o{ CollaborationPermission : "grants"
    Permission ||--o{ CollaborationPermission : "granted"

    Role {
        uuid id PK
        uuid company_id FK
        string name
    }

    MemberPermissionOverride {
        uuid id PK
        uuid member_id FK
        uuid permission_id FK
        uuid company_id FK
        boolean decision
    }
